<resources>
    <string name="app_name">Tag+</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-1132950920553121/4736284767</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="input_tag_title">태그모음 제목</string>
    <string name="input_tag_title_example">입력 예시) \nDeveloper</string>
    <string name="input_tag">태그입력</string>
    <string name="input_tag_example">입력 예시) \n#안드로이드 #개발자</string>
    <string name="input_tag_submit">추가하기</string>
    <string name="input_tag_back">뒤로가기</string>
    <string name="popularTags">POP</string>
    <string name="myTags">MINE</string>
    <string name="addMyTags_edit">addMyTags_edit</string>
    <string name="addMyTags_button">addMyTags_button</string>
    <string name="copy">복사</string>
    <string name="save">저장</string>
    <string name="editTextHint">저장할 태그명을 입력하세요(ex.사랑)</string>
    <string name="recommend_title">&lt;추천 해시태그&gt;</string>
    <string name="recommend_copy">복사</string>
    <string name="goBack">뒤로가기</string>
    <string name="no_recommend">추천할 태그가 없습니다.</string>
    <string name="enableCopy">복사할 태그가 없습니다</string>
    <string name="alreadySelectde">이미 선택된 태그입니다.</string>
    <string name="copyDone">복사완료</string>
    <string name="finish_title">종료</string>
    <string name="finish_content">종료하시겠습니까?</string>
    <string name="finish_disagree">취소</string>
    <string name="finish_agree">확인</string>
    <string name="alreadyExist">이미 저장된 태그입니다</string>
    <string name="successInsert">저정 완료</string>
    <string name="deleteTag">태그를 삭제 하시겠습니까?</string>
    <string name="disagree">취소</string>
    <string name="agree">삭제</string>
    <string name="deleteSuccess">삭제 완료</string>
    <string name="maxTag">최대 태그의 개수는 30개 입니다.</string>
    <string-array name="hot">
        <item>소통</item>
        <item>일상스타그램</item>
        <item>선팔하면맞팔</item>
        <item>데일리그램</item>
        <item>선팔</item>
        <item>좋아요</item>
        <item>데일리</item>
        <item>인스타데일리</item>
        <item>맞팔</item>
        <item>일상</item>
        <item>댓글</item>
        <item>맛스타그램</item>
        <item>먹방</item>
        <item>인스타푸드</item>
        <item>먹스타그램</item>
        <item>오늘뭐먹지</item>
        <item>먹방</item>
        <item>야식스타그램</item>
        <item>맛있당</item>
        <item>요리</item>
        <item>냠냠</item>
        <item>여행</item>
        <item>여행스타그램</item>
        <item>여행사진</item>
        <item>여행은언제나옳다</item>
        <item>혼자여행</item>
        <item>여행에미치다</item>
        <item>여행어디까지가봤니</item>
        <item>힐링여행</item>
        <item>동행스타그램</item>
        <item>혼여</item>
        <item>여행중</item>
        <item>여행지추천</item>
        <item>사진</item>
        <item>스냅</item>
        <item>오늘의사진</item>
        <item>사진스타그램</item>
        <item>포토그래퍼</item>
        <item>카메라</item>
        <item>출사</item>
        <item>셀카</item>
        <item>미러리스</item>
        <item>dslr</item>
        <item>갬성사진</item>
        <item>포토그램</item>
        <item>감성사진</item>
        <item>사진소통</item>
        <item>갬성스타그램</item>
        <item>사진취미</item>
        <item>사진연습</item>
        <item>찰칵</item>
        <item>셀피</item>
        <item>셀스타그램</item>
        <item>오오티디</item>
        <item>ootd</item>
        <item>셀카</item>
        <item>얼스타그램</item>
        <item>인스타그램</item>
        <item>맞팔환영</item>
        <item>selfie</item>
    </string-array>
    <string-array name="love">
        <item>사랑해</item>
        <item>사랑</item>
        <item>내사랑</item>
        <item>사랑해요</item>
        <item>사랑둥이</item>
        <item>사랑해?</item>
        <item>사랑스러워</item>
        <item>사랑합니다</item>
        <item>사랑한다</item>
        <item>사랑하는</item>
        <item>love</item>
        <item>instalove</item>
        <item>loveit</item>
        <item>lovely</item>
        <item>mylove</item>
        <item>naturelovers</item>
        <item>loveher</item>
        <item>loveyou</item>
        <item>loveyourself</item>
        <item>doglover</item>
        <item>puppylove</item>
        <item>iloveyou</item>
        <item>럽스타그램</item>
        <item>럽스타</item>
        <item>커플</item>
        <item>럽</item>
        <item>알콩달콩</item>
        <item>사랑꾼</item>
        <item>luvstagram</item>
        <item>소중한</item>
        <item>고백</item>
        <item>감정</item>
        <item>행복</item>
        <item>연애중</item>
        <item>데이트</item>
        <item>연애스타그램</item>
        <item>데이트스타그램</item>
    </string-array>
    <string-array name="daily">
        <item>일상</item>
        <item>맞팔</item>
        <item>선팔</item>
        <item>팔로우</item>
        <item>선팔하면맞팔</item>
        <item>맞팔해요</item>
        <item>선팔맞팔</item>
        <item>맞팔환영</item>
        <item>팔로미</item>
        <item>팔로워</item>
        <item>팔로잉</item>
        <item>팔로우미</item>
        <item>선팔환영</item>
        <item>맞팔선팔</item>
        <item>맞팔댓글</item>
        <item>맞팔좋아요</item>
        <item>선팔좋아요</item>
        <item>추억팔이</item>
        <item>맞팔은댓글</item>
        <item>선팔하면맞팔가요</item>
        <item>팔로</item>
        <item>팔로우환영</item>
        <item>좋아요</item>
        <item>좋아요반사</item>
        <item>좋반</item>
        <item>좋다</item>
        <item>좋아</item>
        <item>좋튀</item>
        <item>좋아요테러</item>
        <item>좋아요그램</item>
        <item>맞팔좋아요</item>
        <item>선팔좋아요</item>
        <item>좋은글</item>
        <item>날씨좋다</item>
        <item>좋반테러</item>
        <item>소통좋아요</item>
        <item>좋테</item>
        <item>좋은글귀</item>
        <item>소통</item>
        <item>육아소통</item>
        <item>소통해요</item>
        <item>소통환영</item>
        <item>소통스타그램</item>
        <item>일상소통</item>
        <item>소통그램</item>
        <item>육아소통환영</item>
        <item>follow</item>
        <item>followme</item>
        <item>follow4follow</item>
        <item>followforfollow</item>
        <item>likeforfollow</item>
        <item>instafollow</item>
        <item>followback</item>
        <item>followforfollowback</item>
        <item>like4follow</item>
        <item>like4like</item>
        <item>instalike</item>
        <item>likeforlike</item>
        <item>tagsforlikes</item>
        <item>likeforfollow</item>
        <item>likeforlikes</item>
        <item>likes</item>
        <item>like4likes</item>
        <item>likesforlikes</item>
        <item>like4follow</item>
        <item>20likes</item>
        <item>likeback</item>
        <item>likes4likes</item>
        <item>liker</item>
        <item>likeme</item>
        <item>인친</item>
        <item>인친환영</item>
        <item>인친해요</item>
    </string-array>
    <string-array name="photo">
        <item>셀카</item>
        <item>셀스타그램</item>
        <item>셀피</item>
        <item>셀기꾼</item>
        <item>셀스타</item>
        <item>셀카그램</item>
        <item>셀피그램</item>
        <item>selfie</item>
        <item>selstagram</item>
        <item>얼스타그램</item>
        <item>얼짱</item>
        <item>얼스타</item>
        <item>얼굴</item>
        <item>쌩얼</item>
        <item>사진</item>
        <item>감성사진</item>
        <item>사진스타그램</item>
        <item>스냅사진</item>
        <item>인물사진</item>
        <item>여행사진</item>
        <item>가족사진</item>
        <item>필름사진</item>
        <item>풍경사진</item>
        <item>일상사진</item>
        <item>인생사진</item>
        <item>흑백사진</item>
        <item>사진작가</item>
        <item>프로필사진</item>
        <item>커플사진</item>
        <item>웨딩사진</item>
        <item>아기사진</item>
        <item>음식사진</item>
        <item>우정사진</item>
        <item>사진촬영</item>
        <item>컨셉사진</item>
        <item>돌사진</item>
        <item>증명사진</item>
        <item>졸업사진</item>
        <item>만삭사진</item>
        <item>사진찍기</item>
        <item>사진그램</item>
        <item>단체사진</item>
        <item>photooftheday</item>
        <item>photography</item>
        <item>photo</item>
        <item>photographer</item>
        <item>photoshoot</item>
        <item>travelphotography</item>
        <item>instaphoto</item>
        <item>naturephotography</item>
        <item>streetphotography</item>
        <item>photos</item>
        <item>foodphotography</item>
        <item>portraitphotography</item>
        <item>landscapephotography</item>
        <item>photoshop</item>
        <item>photograph</item>
        <item>photogrid</item>
        <item>weddingphotography</item>
        <item>blackandwhitephotography</item>
        <item>filmphotography</item>
        <item>fashionphotography</item>
        <item>canonphotography</item>
        <item>weddingphotographer</item>
        <item>nikonphotography</item>
        <item>mobilephotography</item>
        <item>travelphoto</item>
        <item>iphonephotography</item>
        <item>architecturephotography</item>
        <item>photographylovers</item>
        <item>photogram</item>
        <item>photoart</item>
        <item>카메라</item>
        <item>필름카메라</item>
        <item>camera</item>
        <item>tokyocameraclub</item>
        <item>filmcamera</item>
        <item>cameramama</item>
        <item>leicacamera</item>
        <item>selfcamera</item>
        <item>새벽</item>
        <item>배경</item>
        <item>보정</item>
        <item>노을</item>
        <item>캐논</item>
        <item>canon</item>

    </string-array>
    <string-array name="food">
        <item>맛스타그램</item>
        <item>맛집</item>
        <item>맛있다</item>
        <item>맛있다그램</item>
        <item>존맛</item>
        <item>부산맛집</item>
        <item>제주맛집</item>
        <item>맛스타</item>
        <item>존맛탱</item>
        <item>꿀맛</item>
        <item>음식</item>
        <item>음식스타그램</item>
        <item>음식사진</item>
        <item>태국음식</item>
        <item>배달음식</item>
        <item>맛있는음식</item>
        <item>한국음식</item>
        <item>다이어트음식</item>
        <item>중국음식</item>
        <item>길거리음식</item>
        <item>food</item>
        <item>foodporn</item>
        <item>instafood</item>
        <item>foodie</item>
        <item>healthyfood</item>
        <item>foodstagram</item>
        <item>foodgasm</item>
        <item>foodphotography</item>
        <item>foodblogger</item>
        <item>foodlover</item>
        <item>foodpics</item>
        <item>foodpic</item>
        <item>foodies</item>
        <item>foods</item>
        <item>veganfood</item>
        <item>seafood</item>
        <item>goodfood</item>
        <item>foodgram</item>
        <item>japanesefood</item>
        <item>italianfood</item>
        <item>foodlovers</item>
        <item>푸드스타그램</item>
        <item>인스타푸드</item>
        <item>푸드</item>
        <item>먹스타그램</item>
        <item>먹방</item>
        <item>먹스타</item>
        <item>먹부림</item>
        <item>먹방스타그램</item>
        <item>오늘뭐먹지</item>
        <item>먹방여행</item>
        <item>잘먹었습니다</item>
        <item>먹방그램</item>
        <item>술스타그램</item>
        <item>혼술</item>
        <item>술집</item>
        <item>낮술</item>
        <item>술안주</item>
    </string-array>
    <string-array name="trip">
        <item>여행스타그램</item>
        <item>여행</item>
        <item>여행에미치다</item>
        <item>제주여행</item>
        <item>가족여행</item>
        <item>제주도여행</item>
        <item>유럽여행</item>
        <item>부산여행</item>
        <item>일본여행</item>
        <item>해외여행</item>
        <item>여행사진</item>
        <item>신혼여행</item>
        <item>국내여행</item>
        <item>여행그램</item>
        <item>여행중</item>
        <item>경주여행</item>
        <item>우정여행</item>
        <item>배낭여행</item>
        <item>힐링여행</item>
        <item>자유여행</item>
        <item>trip</item>
        <item>roadtrip</item>
        <item>vacation</item>
        <item>travel</item>
        <item>travelgram</item>
        <item>instatravel</item>
        <item>travelphotography</item>
        <item>traveling</item>
        <item>travelling</item>
        <item>travelblogger</item>
        <item>traveler</item>
    </string-array>
</resources>