<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/popSubject_line01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popSubject_line01_item01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/top" />

        <Button
            android:id="@+id/popSubject_line01_item02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/love" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popSubject_line02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popSubject_line01"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popSubject_line02_item01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily" />

        <Button
            android:id="@+id/popSubject_line02_item02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/photo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popSubject_line03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popSubject_line02"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/popSubject_line03_item01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/food" />

        <Button
            android:id="@+id/popSubject_line03_item02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip" />
    </LinearLayout>

</RelativeLayout>