<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragmentAddTag"
            type="com.tagplus.addhashtags.view.FragmentMineAddTag" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addTagsConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mint02">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tagContentTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/input_tag_title"
                app:expandedHintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/tagContent"
                app:layout_constraintDimensionRatio="4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagContentTitle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_tag_title_example"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tagContent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:hint="@string/input_tag"
                app:expandedHintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/addTagSubmit"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagContentTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tagContent_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_tag_example"
                    android:minLines="10"
                    android:scrollbarAlwaysDrawVerticalTrack="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addTagSubmit"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/mint05"
                android:onClick="@{() -> fragmentAddTag.submit()}"
                android:text="@string/input_tag_submit"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/addTagBack"
                app:layout_constraintDimensionRatio="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagContent" />

            <Button
                android:id="@+id/addTagBack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/mint05"
                android:onClick="@{() -> fragmentAddTag.back()}"
                android:text="@string/input_tag_back"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addTagSubmit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>