<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/window_layer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFBA"
    android:orientation="vertical"
    android:weightSum="10">

    <WebView
        android:id="@+id/window_webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
    </WebView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/window_recommend_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/recommend_title"
            android:textColor="#833ab4"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/window_goback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#FFEFBA"
            android:text="@string/goBack"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/window_recommend_layer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/window_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="#FFFFFF"
            android:textColor="#f7797d"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/window_recommend_copy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#FFEFBA"
            android:text="@string/recommend_copy"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>